trunk/src/objects/Project2__c.object
<CustomObject>
    <description>Project2</description>
    <fields>
        <fullName>Access__c</fullName>
        <description>Project Access</description>
        <inlineHelpText>Open - Anyone can join. Anyone can see the Project

Close - Administrator must invite users to join. Anyone can see the Project

Private -  This Project will not appear in search. Membership is by invitation only. Only members can see the Project.</inlineHelpText>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AllowCustomerUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to allow customer portal users.</inlineHelpText>
        <label>Allow customer portal users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowPartnerUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to allow partner portal users</inlineHelpText>
        <label>Allow partner portal users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaysInWorkWeek__c</fullName>
        <description>Sets how many days in a  work week.</description>
        <inlineHelpText>1 = Mon /  7 = Sun</inlineHelpText>
        <label>Days in a work week</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisplayDuration__c</fullName>
        <inlineHelpText>Sets how the Duration field will be displayed, in hours or days.</inlineHelpText>
        <label>Display Duration</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF(Picture__c != null, IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Picture__c, &apos;Project Avatar&apos;, 70, 70) , &quot;[No Image]&quot;)  &amp; HYPERLINK(&apos;javascript: addAvatar()&apos;, &apos;Change Image&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewMemberProfile__c</fullName>
        <label>NewMemberProfile</label>
        <referenceTo>ProjectProfile__c</referenceTo>
        <relationshipLabel>Project (NewMemberProfile)</relationshipLabel>
        <relationshipName>Project1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <description>Picture</description>
        <label>Picture</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectCreatedBy__c</fullName>
        <label>ProjectCreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectCreatedDate__c</fullName>
        <label>ProjectCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PublicProfile__c</fullName>
        <label>PublicProfile</label>
        <referenceTo>ProjectProfile__c</referenceTo>
        <relationshipLabel>Project</relationshipLabel>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SyncToCalendar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SyncToCalendar</description>
        <label>SyncToCalendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkingHours__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Sets the amount of hour worked per day.</description>
        <inlineHelpText>Working hour should be between 1 - 24</inlineHelpText>
        <label>Working hours</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_View</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All View</label>
    </listViews>
    <listViews>
        <fullName>Marcs_View</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Marc</value>
        </filters>
        <label>Marcs View</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Working_hours_Limit</fullName>
        <active>true</active>
        <description>Controls user input for working hours, should not exceed 24 hours per day</description>
        <errorConditionFormula>WorkingHours__c &gt;24</errorConditionFormula>
        <errorDisplayField>WorkingHours__c</errorDisplayField>
        <errorMessage>Value cannot exceed 24 hours per day</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Working_hours_negative_value</fullName>
        <active>true</active>
        <description>validates that working hours wont be a negative number</description>
        <errorConditionFormula>WorkingHours__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>WorkingHours__c</errorDisplayField>
        <errorMessage>Value must be greater than Zero</errorMessage>
    </validationRules>
</CustomObject>